--- a/viikko3/web-login/report.html
+++ b/viikko3/web-login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,23521],[[4,5,6,0,[],[1,14,7053],[],[[7,0,0,[],[1,1179,2704],[]],[9,0,0,[],[1,3884,2621],[]]],[],[2,2,0,0]],[8,10,11,0,[],[1,7069,16450],[],[[12,0,0,[],[1,8128,6970],[]],[13,0,0,[],[1,15099,7859],[]]],[],[2,2,0,0]]],[],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,3571],[[4,5,6,0,[],[1,12,915],[],[[7,0,0,[],[1,759,70],[]],[9,0,0,[],[1,829,44],[]]],[],[2,2,0,0]],[8,11,12,0,[],[1,928,1173],[],[[13,0,0,[],[1,1593,175],[]],[14,0,0,[],[1,1768,136],[]],[15,0,0,[],[1,1904,136],[]]],[],[3,3,0,0]],[10,16,17,0,[],[1,2102,1468],[],[[18,0,0,[],[1,2774,211],[]],[19,0,0,[],[1,2985,179],[]],[20,0,0,[],[1,3164,174],[]],[21,0,0,[],[1,3338,171],[]]],[],[4,4,0,0]]],[],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/ilhe/palautusrepositorio/viikko3/web-login/src/tests","*src/tests","*Home","*/home/ilhe/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*/home/ilhe/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/ilhe/palautusrepositorio/viikko3/web-login/src/tests","*src/tests","*Home","*/home/ilhe/palautusrepositorio/viikko3/web-login/src/tests/home.robot","*src/tests/home.robot","*Click Login Link","*Login","*Click Register Link","*Register","*/home/ilhe/palautusrepositorio/viikko3/web-login/src/tests/login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Login With Incorrect Password","*Login With Nonexistent Username","*/home/ilhe/palautusrepositorio/viikko3/web-login/src/tests/register.robot","*src/tests/register.robot","*Register With Valid Username And Password","*Register With Too Short Username And Valid Password","*Register With Valid Username And Invalid Password","*Register With Nonmatching Password And Password Confirmation"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":9,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s1","label":"Tests.Home","name":"Home","pass":2,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s2","label":"Tests.Login","name":"Login","pass":3,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s3","label":"Tests.Register","name":"Register","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699984322854;
+window.output["baseMillis"] = 1700053271060;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 23536;
+window.output["generated"] = 3586;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
